# calc

./: .gitignore  CMakeLists.txt  README.md  calc  rtcalc.c
src/: main.cpp
src/compiler/: AST.hpp  codegen.cpp  codegen.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  sema.cpp  sema.hpp
src/frontend/: lexer.cpp
